test deletePerson