@@ -1,29 +1,57 @@
 package com.openclassrooms.SafetyNetAlerts.controller;
 
+import com.google.gson.JsonArray;
+import com.google.gson.JsonObject;
+import com.google.gson.JsonParser;
+import com.openclassrooms.SafetyNetAlerts.JacksonConfiguration;
 import com.openclassrooms.SafetyNetAlerts.dao.MedicalRecordDao;
 import com.openclassrooms.SafetyNetAlerts.dao.PersonDaoImpl;
 import com.openclassrooms.SafetyNetAlerts.model.Person;
+
+import java.io.FileNotFoundException;
+
+import java.util.ArrayList;
+
+import org.junit.Assert;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.autoconfigure.web.servlet.WebMvcTest;
 import org.springframework.boot.test.mock.mockito.MockBean;
+import org.springframework.context.annotation.Import;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.MediaType;
+import org.springframework.http.ResponseEntity;
+import org.springframework.mock.web.MockHttpServletRequest;
 import org.springframework.mock.web.MockHttpServletResponse;
+import org.springframework.test.context.ContextConfiguration;
 import org.springframework.test.context.junit.jupiter.SpringExtension;
 import org.springframework.test.web.servlet.MockMvc;
+import org.springframework.test.web.servlet.request.MockMvcRequestBuilders;
 
 import java.util.Collections;
 import java.util.List;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertTrue;
+import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.when;
 import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.*;
 
+
+//@SpringBootTest
+//@AutoConfigureMockMvc
+@ContextConfiguration(classes = {PersonController.class})
 @ExtendWith(SpringExtension.class)
 @WebMvcTest(PersonController.class)
+@Import(JacksonConfiguration.class)
 class PersonControllerTest {
+
+    //    @MockBean
+//    private MedicalRecordDao medicalRecordDao;
+    @Autowired
+    private PersonController personController;
+
 
     @Autowired
     private MockMvc mockMvc;
@@ -37,18 +65,23 @@ class PersonControllerTest {
     void testAllPersons() throws Exception {
         // Setup
 
+
         // Configure PersonDaoImpl.findAll(...).
-        final List<Person> personList = List.of(new Person("firstName", "lastName", "address", "city", 0, "phone", "email"));
+        List<Person> personList = List.of(new Person("firstName", "lastName", "address", "city", 0, "phone", "email"));
         when(mockPersonDao.findAll()).thenReturn(personList);
 
         // Run the test
-        final MockHttpServletResponse response = mockMvc.perform(get("/person")
-                .accept(MediaType.APPLICATION_JSON))
+        MockHttpServletResponse response = mockMvc.perform(get("/person")
+                        .accept(MediaType.APPLICATION_JSON))
                 .andReturn().getResponse();
+
 
         // Verify the results
         assertEquals(HttpStatus.OK.value(), response.getStatus());
-        assertEquals("expectedResponse", response.getContentAsString());
+        assertEquals("[{\"firstName\":\"firstName\",\"lastName\":\"lastName\",\"location\"" +
+                ":{\"address\":\"address\",\"city\":\"city\",\"zip\":0},\"phone\":\"phone\",\"email\"" +
+                ":\"email\",\"medicalRecord\":{\"medications\":[],\"allergies\":[]},\"birthdate\":null," +
+                "\"age\":0}]", response.getContentAsString());
     }
 
     @Test
@@ -58,12 +91,12 @@ class PersonControllerTest {
 
         // Run the test
         final MockHttpServletResponse response = mockMvc.perform(get("/person")
-                .accept(MediaType.APPLICATION_JSON))
+                        .accept(MediaType.APPLICATION_JSON))
                 .andReturn().getResponse();
 
         // Verify the results
         assertEquals(HttpStatus.OK.value(), response.getStatus());
-        assertEquals("expectedResponse", response.getContentAsString());
+        assertEquals("[]", response.getContentAsString());
     }
 
     @Test
@@ -76,7 +109,7 @@ class PersonControllerTest {
 
         // Run the test
         final MockHttpServletResponse response = mockMvc.perform(get("/person")
-                .accept(MediaType.APPLICATION_JSON))
+                        .accept(MediaType.APPLICATION_JSON))
                 .andReturn().getResponse();
 
         // Verify the results
@@ -87,38 +120,66 @@ class PersonControllerTest {
     @Test
     void testGetPerson() throws Exception {
         // Setup
+        //mockMvc.perform(get("/personInfo")).andExpect(status().isOk()).andExpect((ResultMatcher) jsonPath("$[0].firstname", is("John")));
 
         // Configure PersonDaoImpl.findAll(...).
-        final List<Person> personList = List.of(new Person("firstName", "lastName", "address", "city", 0, "phone", "email"));
+        Person testPerson = new Person("firstName", "lastName", "address", "city", 0, "phone", "email");
+        final List<Person> personList = List.of(testPerson);
         when(mockPersonDao.findAll()).thenReturn(personList);
 
         // Run the test
         final MockHttpServletResponse response = mockMvc.perform(get("/personInfo")
-                .param("firstName", "firstName")
-                .param("lastName", "lastName")
-                .accept(MediaType.APPLICATION_JSON))
+                        .param("firstName", "firstName")
+                        .param("lastName", "lastName")
+                        .accept(MediaType.APPLICATION_JSON))
                 .andReturn().getResponse();
+        System.out.println(HttpStatus.OK.value());
 
         // Verify the results
         assertEquals(HttpStatus.OK.value(), response.getStatus());
-        assertEquals("expectedResponse", response.getContentAsString());
+        JsonArray jsonArray = new JsonParser().parse(response.getContentAsString()).getAsJsonArray();
+        assertEquals(1, jsonArray.size());
     }
 
     @Test
-    void testGetPerson_PersonDaoImplReturnsNoItems() throws Exception {
-        // Setup
-        when(mockPersonDao.findAll()).thenReturn(Collections.emptyList());
+    void testGetPerson_ReturnsNotFound() throws Exception {
+        // Configure PersonDaoImpl.findAll(...).
+        Person testPerson = new Person("firstName", "lastName", "address", "city", 0, "phone", "email");
+        final List<Person> personList = List.of(testPerson);
+        when(mockPersonDao.findAll()).thenReturn(personList);
 
         // Run the test
         final MockHttpServletResponse response = mockMvc.perform(get("/personInfo")
-                .param("firstName", "firstName")
-                .param("lastName", "lastName")
-                .accept(MediaType.APPLICATION_JSON))
+                        .param("firstName", "serge")
+                        .param("lastName", "lastName")
+                        .accept(MediaType.APPLICATION_JSON))
                 .andReturn().getResponse();
 
         // Verify the results
-        assertEquals(HttpStatus.OK.value(), response.getStatus());
-        assertEquals("expectedResponse", response.getContentAsString());
+        assertEquals(HttpStatus.NOT_FOUND.value(), response.getStatus());
+        assertEquals("not found", response.getContentAsString());
+
+    }
+
+    @Test
+    void testGetPerson_ReturnsBadRequest() throws Exception {
+        // Configure PersonDaoImpl.findAll(...).
+        Person testPerson = new Person("firstName", "lastName", "address", "city", 0, "phone", "email");
+        final List<Person> personList = List.of(testPerson);
+        when(mockPersonDao.findAll()).thenReturn(personList);
+
+        // Run the test
+        final MockHttpServletResponse response = mockMvc.perform(get("/personInfo")
+                        .param("firstName", "")
+                        .param("lastName", "")
+                        .param("bad")
+                        .accept(MediaType.APPLICATION_JSON))
+                .andReturn().getResponse();
+        System.out.println(response.getStatus());
+
+        // Verify the results
+        assertEquals(HttpStatus.BAD_REQUEST.value(), response.getStatus());
+        assertEquals("bad request", response.getContentAsString());
     }
 
     @Test
@@ -131,9 +192,9 @@ class PersonControllerTest {
 
         // Run the test
         final MockHttpServletResponse response = mockMvc.perform(get("/personInfo")
-                .param("firstName", "firstName")
-                .param("lastName", "lastName")
-                .accept(MediaType.APPLICATION_JSON))
+                        .param("firstName", "firstName")
+                        .param("lastName", "lastName")
+                        .accept(MediaType.APPLICATION_JSON))
                 .andReturn().getResponse();
 
         // Verify the results
@@ -151,13 +212,13 @@ class PersonControllerTest {
 
         // Run the test
         final MockHttpServletResponse response = mockMvc.perform(get("/communityEmail")
-                .param("queryStringParameters", "queryStringParameters")
-                .accept(MediaType.APPLICATION_JSON))
+                        .param("city", "city")
+                        .accept(MediaType.APPLICATION_JSON))
                 .andReturn().getResponse();
 
         // Verify the results
         assertEquals(HttpStatus.OK.value(), response.getStatus());
-        assertEquals("expectedResponse", response.getContentAsString());
+        assertEquals("[\"FirstName = firstName, LastName = lastName, Email = email\"]", response.getContentAsString());
     }
 
     @Test
@@ -167,13 +228,13 @@ class PersonControllerTest {
 
         // Run the test
         final MockHttpServletResponse response = mockMvc.perform(get("/communityEmail")
-                .param("queryStringParameters", "queryStringParameters")
-                .accept(MediaType.APPLICATION_JSON))
+                        .param("city", "city")
+                        .accept(MediaType.APPLICATION_JSON))
                 .andReturn().getResponse();
 
         // Verify the results
         assertEquals(HttpStatus.OK.value(), response.getStatus());
-        assertEquals("expectedResponse", response.getContentAsString());
+        assertEquals("[]", response.getContentAsString());
     }
 
     @Test
@@ -186,8 +247,8 @@ class PersonControllerTest {
 
         // Run the test
         final MockHttpServletResponse response = mockMvc.perform(get("/communityEmail")
-                .param("queryStringParameters", "queryStringParameters")
-                .accept(MediaType.APPLICATION_JSON))
+                        .param("city", "city")
+                        .accept(MediaType.APPLICATION_JSON))
                 .andReturn().getResponse();
 
         // Verify the results
@@ -199,19 +260,25 @@ class PersonControllerTest {
     void testAddPerson() throws Exception {
         // Setup
 
-        // Configure PersonDaoImpl.savedPerson(...).
-        final Person person = new Person("firstName", "lastName", "address", "city", 0, "phone", "email");
-        when(mockPersonDao.savedPerson(new Person("firstName", "lastName", "address", "city", 0, "phone", "email"))).thenReturn(person);
+        // Configure PersonDaoImpl.findAll(...).
+        Person testPerson = new Person("firstName", "lastName", "address", "city", 0, "phone", "email");
+        final List<Person> personList = List.of(testPerson);
+        when(mockPersonDao.findAll()).thenReturn(personList);
 
         // Run the test
+        JsonObject jsonObject = new JsonObject();
+        jsonObject.addProperty("lastName", "serge");
+        jsonObject.addProperty("firstName", "pierre");
+        jsonObject.addProperty("email", "pierre@gmail.com");
         final MockHttpServletResponse response = mockMvc.perform(post("/person")
-                .content("content").contentType(MediaType.APPLICATION_JSON)
-                .accept(MediaType.APPLICATION_JSON))
+                        .content(jsonObject.toString()).contentType(MediaType.APPLICATION_JSON)
+                        .accept(MediaType.APPLICATION_JSON))
                 .andReturn().getResponse();
-
         // Verify the results
-        assertEquals(HttpStatus.OK.value(), response.getStatus());
-        assertEquals("expectedResponse", response.getContentAsString());
+        assertEquals(HttpStatus.CREATED.value(), response.getStatus());
+//        List<Person> result = mockPersonDao.findAll();
+//        //JsonArray jsonArray = new JsonParser().parse(response.getContentAsString()).getAsJsonArray();
+//        assertEquals(2, personList.size());
     }
 
     @Test
@@ -219,18 +286,51 @@ class PersonControllerTest {
         // Setup
 
         // Configure PersonDaoImpl.findAll(...).
-        final List<Person> personList = List.of(new Person("firstName", "lastName", "address", "city", 0, "phone", "email"));
+        Person testPerson = new Person("firstName", "lastName", "address", "city", 0, "phone", "email");
+        final List<Person> personList = List.of(testPerson);
         when(mockPersonDao.findAll()).thenReturn(personList);
 
         // Run the test
+        JsonObject jsonObject = new JsonObject();
+        jsonObject.addProperty("lastName", "lastName");
+        jsonObject.addProperty("firstName", "firstName");
+        jsonObject.addProperty("email", "firstName@gmail.com");
         final MockHttpServletResponse response = mockMvc.perform(put("/person")
-                .content("content").contentType(MediaType.APPLICATION_JSON)
-                .accept(MediaType.APPLICATION_JSON))
+                        .content(jsonObject.toString()).contentType(MediaType.APPLICATION_JSON)
+                        .accept(MediaType.APPLICATION_JSON))
                 .andReturn().getResponse();
+        JsonObject jsonObjectResponse = new JsonParser().parse(response.getContentAsString()).getAsJsonObject();
+        System.out.println(response.getContentAsString());
+
 
         // Verify the results
         assertEquals(HttpStatus.OK.value(), response.getStatus());
-        assertEquals("expectedResponse", response.getContentAsString());
+        assertEquals("firstName@gmail.com", jsonObjectResponse.get("email").getAsString());
+    }
+
+    @Test
+    void testUpdatePerson_ReturnBadRequest() throws Exception {
+        // Setup
+
+        // Configure PersonDaoImpl.findAll(...).
+        Person testPerson = new Person("firstName", "lastName", "address", "city", 0, "phone", "email");
+        final List<Person> personList = List.of(testPerson);
+        when(mockPersonDao.findAll()).thenReturn(personList);
+
+        // Run the test
+        JsonObject jsonObject = new JsonObject();
+//        jsonObject.addProperty("lastName", "las");
+//        jsonObject.addProperty("firstName", "");
+//        jsonObject.addProperty("email", "");
+        final MockHttpServletResponse response = mockMvc.perform(put("/person")
+                        .contentType(MediaType.APPLICATION_JSON)
+                        .accept(MediaType.APPLICATION_JSON))
+                .andReturn().getResponse();
+//        JsonObject jsonObjectResponse = new JsonParser().parse(response.getContentAsString()).getAsJsonObject();
+
+        // Verify the results
+        assertEquals(HttpStatus.BAD_REQUEST.value(), response.getStatus());
+        //assertEquals("firstName@gmail.com", jsonObjectResponse.get("email").getAsString());
     }
 
     @Test
@@ -240,8 +340,8 @@ class PersonControllerTest {
 
         // Run the test
         final MockHttpServletResponse response = mockMvc.perform(put("/person")
-                .content("content").contentType(MediaType.APPLICATION_JSON)
-                .accept(MediaType.APPLICATION_JSON))
+                        .content("content").contentType(MediaType.APPLICATION_JSON)
+                        .accept(MediaType.APPLICATION_JSON))
                 .andReturn().getResponse();
 
         // Verify the results
@@ -259,8 +359,8 @@ class PersonControllerTest {
 
         // Run the test
         final MockHttpServletResponse response = mockMvc.perform(put("/person")
-                .content("content").contentType(MediaType.APPLICATION_JSON)
-                .accept(MediaType.APPLICATION_JSON))
+                        .content("content").contentType(MediaType.APPLICATION_JSON)
+                        .accept(MediaType.APPLICATION_JSON))
                 .andReturn().getResponse();
 
         // Verify the results
@@ -268,13 +368,10 @@ class PersonControllerTest {
         assertEquals("expectedResponse", response.getContentAsString());
     }
 
-//    @Test
-//    void testDeletePerson() throws Exception {
+    @Test
+    void testDeletePerson() throws Exception {
 //        // Setup
-//
-//        // Configure PersonDaoImpl.deletedPerson(...).
-//        final Person person = new Person("firstName", "lastName", "address", "city", 0, "phone", "email");
-//        when(mockPersonDao.deletedPerson(new Person("firstName", "lastName", "address", "city", 0, "phone", "email"))).thenReturn(person);
+//        when(mockPersonDao.deletedPerson(new Person("firstName", "lastName", "address", "city", 0, "phone", "email"))).thenReturn(false);
 //
 //        // Run the test
 //        final MockHttpServletResponse response = mockMvc.perform(delete("/person")
@@ -285,7 +382,65 @@ class PersonControllerTest {
 //        // Verify the results
 //        assertEquals(HttpStatus.OK.value(), response.getStatus());
 //        assertEquals("expectedResponse", response.getContentAsString());
-//    }
+
+        Person testPerson = new Person("firstName", "lastName", "address", "city", 0, "phone", "email");
+        final List<Person> personList = List.of(testPerson);
+        when(mockPersonDao.findAll()).thenReturn(personList);
+
+        JsonObject jsonObject = new JsonObject();
+        jsonObject.addProperty("lastName", "lastName");
+        jsonObject.addProperty("firstName", "firstName");
+        jsonObject.addProperty("city", "anglet");
+        final MockHttpServletResponse response = mockMvc.perform(delete("/person")
+                        .content(jsonObject.toString()).contentType(MediaType.APPLICATION_JSON)
+                        .accept(MediaType.APPLICATION_JSON))
+                .andReturn().getResponse();
+
+        JsonObject jsonObjectResponse = new JsonParser().parse(response.getContentAsString()).getAsJsonObject();
+        // System.out.println(jsonObject);
+        System.out.println(response.getContentAsString());
+        // Verify the results
+        assertEquals(HttpStatus.OK.value(), response.getStatus());
+        //assertEquals("firstName@gmail.com", jsonObjectResponse.get("email").getAsString());
+    }
+
+
+    @Test
+    void testDeletePerson_ReturnBadRequest() throws Exception {
+        // Setup
+
+        // Configure PersonDaoImpl.findAll(...).
+        Person testPerson = new Person("firstName", "lastName", "address", "city", 0, "phone", "email");
+        final List<Person> personList = List.of(testPerson);
+        when(mockPersonDao.findAll()).thenReturn(personList);
+
+        // Run the test
+        final MockHttpServletResponse response = mockMvc.perform(delete("/person")
+                        .contentType(MediaType.APPLICATION_JSON)
+                        .accept(MediaType.APPLICATION_JSON))
+                .andReturn().getResponse();
+//        JsonObject jsonObjectResponse = new JsonParser().parse(response.getContentAsString()).getAsJsonObject();
+
+        // Verify the results
+        assertEquals(HttpStatus.BAD_REQUEST.value(), response.getStatus());
+        //assertEquals("firstName@gmail.com", jsonObjectResponse.get("email").getAsString());
+    }
+
+    @Test
+    public void testHealth() {
+        when(this.mockPersonDao.findAll()).thenReturn(new ArrayList<Person>());
+        this.personController.health();
+        verify(this.mockPersonDao).findAll();
+    }
+
+    @Test
+    public void testHealth2() {
+        ArrayList<Person> personList = new ArrayList<Person>();
+        personList.add(new Person("Jane", "Doe", "42 Main St", "Oxford", 1, "4105551212", "jane.doe@example.org"));
+        when(this.mockPersonDao.findAll()).thenReturn(personList);
+        this.personController.health();
+        verify(this.mockPersonDao).findAll();
+    }
 
     @Test
     void testChildAlert() throws Exception {
@@ -297,13 +452,13 @@ class PersonControllerTest {
 
         // Run the test
         final MockHttpServletResponse response = mockMvc.perform(get("/childAlert")
-                .param("queryStringParameters", "queryStringParameters")
-                .accept(MediaType.APPLICATION_JSON))
+                        .param("address", "address")
+                        .accept(MediaType.APPLICATION_JSON))
                 .andReturn().getResponse();
 
         // Verify the results
         assertEquals(HttpStatus.OK.value(), response.getStatus());
-        assertEquals("expectedResponse", response.getContentAsString());
+        assertEquals("[\"FirstName = firstName, LastName = lastName, Age = 0, Family Members = \"]", response.getContentAsString());
     }
 
     @Test
@@ -313,12 +468,12 @@ class PersonControllerTest {
 
         // Run the test
         final MockHttpServletResponse response = mockMvc.perform(get("/childAlert")
-                .param("queryStringParameters", "queryStringParameters")
-                .accept(MediaType.APPLICATION_JSON))
+                        .param("address", "address")
+                        .accept(MediaType.APPLICATION_JSON))
                 .andReturn().getResponse();
 
         // Verify the results
         assertEquals(HttpStatus.OK.value(), response.getStatus());
-        assertEquals("expectedResponse", response.getContentAsString());
+        assertEquals("[]", response.getContentAsString());
     }
 }
